# paste

./: .babelrc  .build.yml  .env.example  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  LICENSE  README.md  Rocket.example.toml  Rocket.toml  api.md  build.rs  config.example.toml  config.toml  default.nix  docker-compose.yml  index.html  paste.sh  sidekiq.example.sh  sidekiq.example.yml  sidekiq.sh
webserver/: Cargo.toml  Rocket.example.toml  build.rs  config.example.toml  highlight.rb  workers.rb
webserver/migrations/2018-04-15-170004_make_username_unique/: up.sql
webserver/migrations/2018-04-16-183428_add_user_columns/: up.sql
webserver/migrations/2018-04-17-214659_add_paste_descriptions/: down.sql
webserver/migrations/2018-04-18-142222_add_created_at_column/: down.sql
webserver/migrations/2018-04-21-203333_add_api_key_names/: down.sql  up.sql
webserver/migrations/2018-05-21-033701_email_validations/: down.sql  up.sql
webserver/migrations/2018-05-22-032636_password_resets/: down.sql  up.sql
webserver/migrations/2018-05-23-142639_reset_attempts/: down.sql  up.sql
webserver/migrations/2018-05-24-201225_fix_email_foreign_key/: down.sql  up.sql
webserver/migrations/2018-05-25-205325_better_email_verification_security/: down.sql  up.sql
webserver/migrations/2018-05-25-215131_add_email_verification_expiry/: down.sql  up.sql
webserver/migrations/2018-07-09-125140_add_highlight_language/: down.sql  up.sql
webserver/migrations/2018-07-14-174531_add_paste_expiry/: down.sql  up.sql
webserver/migrations/2018-08-16-131804_add_2fa_shared_secret/: down.sql  up.sql
webserver/migrations/2018-08-18-155611_add_2fa_backup_codes/: down.sql  up.sql
webserver/migrations/2018-10-15-145902_add_updated_at/: down.sql  up.sql
webserver/migrations/2018-11-11-043006_add_admin_column/: down.sql  up.sql
webserver/migrations/2018-11-29-195214_add_avatar_choice/: down.sql  up.sql
webserver/migrations/2019-11-05-183313_hashed_deletion_keys/: down.sql  up.sql
webserver/src/: backend.rs  config.rs  database.rs  errors.rs  filter.rs  i18n.rs  main.rs  models.rs  redis_store.rs  routes.rs  sidekiq.rs  sidekiq_.rs  store.rs  utils.rs  websocket.rs
webserver/src/backend/: errors.rs  pastes.rs
webserver/src/backend/pastes/: logic.rs  mod.rs  models.rs
webserver/src/database/: models.rs  schema.rs
webserver/src/database/models/: api_keys.rs  backup_codes.rs  deletion_keys.rs  email_verifications.rs  files.rs  login_attempts.rs  mod.rs  password_reset_attempts.rs  password_resets.rs  pastes.rs  users.rs
webserver/src/models/: id.rs  paste.rs  status.rs  user.rs
webserver/src/models/id/: email_verification.rs  file.rs  mod.rs  password_reset.rs  paste.rs  session.rs  user.rs
webserver/src/models/paste/: mod.rs  output.rs  update.rs
webserver/src/routes/: api.rs  mod.rs  web.rs
webserver/src/routes/api/pastes/: delete.rs  get.rs  patch.rs  post.rs
webserver/src/routes/api/users/: get.rs
webserver/src/routes/pastes/: get.rs  post.rs
webserver/src/routes/pastes/files/: post.rs
webserver/src/routes/web/: about.rs  account.rs  admin.rs  auth.rs  credits.rs  fairings.rs  guards.rs  index.rs  mod.rs  pastes.rs  static_files.rs
webserver/src/routes/web/account/: adminify.rs  avatar.rs  delete.rs  index.rs  keys.rs  mod.rs  reset_password.rs  two_factor.rs  verify.rs
webserver/src/routes/web/admin/: config.rs  index.rs  maintenance.rs  pastes.rs  users.rs
webserver/src/routes/web/auth/: login.rs  logout.rs  register.rs
webserver/src/routes/web/fairings/: anti_csrf.rs  csp.rs  last_page.rs  mod.rs  push.rs  security_headers.rs
webserver/src/routes/web/guards/: anti_csrf_token.rs  session.rs
webserver/src/routes/web/pastes/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  revisions.rs
webserver/src/routes/web/users/: get.rs
webserver/src/utils/: accept_language.rs  akismet.rs  client_ip.rs  csv.rs  email.rs  external_links.rs  form_date.rs  hashed_password.rs  highlight.rs  language.rs  mod.rs  multipart.rs  password.rs  post_processing.rs  recaptcha.rs  tera.rs  totp.rs  url_date.rs  validator.rs  webp.rs
webserver/web/: compress_static.sh  create_favicons.sh
webserver/web/emails/: password_reset.html.tera  verify.html.tera
webserver/web/src/css/: _csp-editor.scss  custom.scss  dark-style.scss  style.scss
webserver/web/src/js/: config.js  detect-js.js  editor.js  highlight.js  modal.js  navbar.js  notifications.js  password.js  paste.js  register.js  style.js  timestamps.js  user.js
webserver/web/static/css/: dark-style.css  dark-style.css.map  style.css  style.css.map
webserver/web/static/favicons/: create_favicons.sh
webserver/web/static/js/: admin-delete.js.map  config.js  config.js.map  detect-js.js  detect-js.js.map  editor.js  editor.js.map  highlight.js  highlight.js.map  modal.js  modal.js.map  navbar.js  navbar.js.map  notifications.js  notifications.js.map  password.js  password.js.map  paste.js  paste.js.map  register.js  register.js.map  style.js  style.js.map  timestamps.js  timestamps.js.map  user.js  user.js.map
webserver/web/templates/: _icon.html.tera  about.html.tera  base.html.tera  credits.html.tera  frame.html.tera  generated_credits.html.tera  index.html.tera  index_no_create.tera
webserver/web/templates/account/: delete.html.tera  forgot_password.html.tera  index.html.tera  keys.html.tera  reset_password.html.tera
webserver/web/templates/admin/: _nav.html.tera  config.html.tera  index.html.tera  pastes.html.tera  users.html.tera
webserver/web/templates/auth/: 2fa.html.tera  login.html.tera  register.html.tera
webserver/web/templates/error/: 400.html.tera  403.html.tera  404.html.tera  500.html.tera  other.html.tera
webserver/web/templates/paste/: base_file.html.tera  edit.html.tera  index.html.tera  revisions.html.tera
webserver/web/templates/user/: index.html.tera
workers/email/: Cargo.toml
workers/email/src/: config.rs  lib.rs
workers/expire_paste/: Cargo.toml
workers/expire_paste/src/: lib.rs  paste.rs  schema.rs
(+244 files in other folders)
