[package]
name = "paste"
version = "0.0.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

build = "build.rs"

[badges]
travis-ci = { repository = "jkcclemens/paste", branch = "master" }
maintenance = { status = "actively-developed" }

[build-dependencies]
# getting current commit
git2 = "0.7"

[dependencies]
# all web logic
rocket_codegen = "0.3"

# json serialization and deserialization
serde = "1"
serde_derive = "1"
serde_json = "1"

# creating paste histories
git2 = "0.7"

# handling binary uploads in json
base64 = "0.9"

# error handling in the crate
failure = "0.1"

# accepting base64 gzip data
libflate = "0.1"

# accepintg base64 xz data
xz2 = "0.1"

# secure password hashing
sodiumoxide = "0.0.16"

# environment variable loading
dotenv = "0.11"

# lazy statics
lazy_static = "1"

# complicated ifs with pattern matching
if_chain = "0.1"

# splitting on graphemes
unicode-segmentation = "1"

# making requests
reqwest = "0.8"

# configuration files
toml = "0.4"

# rate limiting (has to be outdated because this is the version diesel uses)
ipnetwork = "0.12"

# anti-csrf tokens
hex = "0.3"

# custom cookies (has to be outdated because this is the version Rocket uses)
cookie = "0.9"

# sanitizing urls
percent-encoding = "1"

# web logic
[dependencies.rocket]
version = "0.3"
features = ["tls"]

# web logic with json and uuids
[dependencies.rocket_contrib]
version = "0.3"
default_features = false
features = ["json", "uuid", "tera_templates"]

# unique paste-related ids
[dependencies.uuid]
version = "0.6"
features = ["v4", "serde"]

# database orm
[dependencies.diesel]
version = "1"
features = ["postgres", "uuid", "r2d2", "chrono", "network-address"]

# timestamp handling
[dependencies.chrono]
version = "0.4"
features = ["serde"]
