[package]
name = "webserver"
version = "0.1.1"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

build = "build.rs"

edition = "2018"

exclude = [
  # pls
  # "web/",
  # "migrations/",
  "web/**/*",
  "migrations/**/*",
]

[badges]
travis-ci = { repository = "jkcclemens/paste", branch = "master" }
maintenance = { status = "actively-developed" }

[build-dependencies]
# getting current commit
git2 = "0.7"

[dependencies]
# json serialization and deserialization
serde = "1"
serde_derive = "1"
serde_json = "1"

# creating paste histories
git2 = "0.7"

# handling binary uploads in json
base64 = "0.10"

# error handling in the crate
failure = "0.1"

# accepting base64 gzip data
libflate = "0.1"

# accepting base64 xz data
xz2 = "0.1"

# secure password hashing
sodiumoxide = "0.1"

# environment variable loading
dotenv = "0.13"

# lazy statics
lazy_static = "1"

# complicated ifs with pattern matching
if_chain = "0.1"

# splitting on graphemes
unicode-segmentation = "1"

# configuration files
toml = "0.4"

# rate limiting
ipnetwork = "0.13"

# anti-csrf tokens
hex = "0.3"

# custom cookies
cookie = "0.11"

# connection pooling
r2d2 = "0.8"

# in-memory data store
redis = "0.9"

# redis connection pooling
r2d2_redis = "0.8"

# scheduling jobs
sidekiq = "0.8"

# username validation
unicode_categories = "0.1"

# email templates
tera = "0.11"

# html sanitizing
ammonia = "1"

# html parsing
html5ever = "0.22"

# url parsing
url = "1"

# comparing strings without case
unicase = "2"

# totp for two-factor authentication
oath = "0.10"

# encoding for totp shared keys
base32 = "0.4"

# needed to handle multipart's mime types
# old version required because multipart depends on an old version
mime = "0.2"

# rewriting image urls for camo with SHA1-HMAC
rust-crypto = "0.2"

# source of randomness
rand = "0.6.0-pre.1"

# creating sha-384 integrity hashes
sha2 = "0.8"

# web logic
[dependencies.rocket]
version = "0.4.0-rc.1"
features = ["tls"]

# web logic with json and uuids
[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json", "tera_templates"]

# unique paste-related ids
[dependencies.uuid]
version = "0.7"
features = ["v4", "serde"]

# database orm
[dependencies.diesel]
version = "1"
features = ["unstable", "postgres", "uuid", "r2d2", "chrono", "network-address"]

# timestamp handling
[dependencies.chrono]
version = "0.4"
features = ["serde"]

# markdown rendering
[dependencies.comrak]
version = "0.3"
default-features = false

# accepting multipart input
[dependencies.multipart]
version = "0.15"
default-features = false
features = ["server", "use_arc_str"]

# faster hashmaps
[dependencies.hashbrown]
git = "https://github.com/Amanieu/hashbrown"
features = ["nightly", "serde"]

# displaying otpauth urls
[dependencies.qrcode]
git = "https://github.com/jkcclemens/qrcode-rust"
branch = "personal"
default-features = false
features = ["svg"]
