[package]
name = "webserver"
version = "0.1.1"
authors = ["Anna Clemens <git@annaclemens.io>"]

build = "build.rs"

edition = "2018"

[package.metadata.credits]
ignore = [
  # see rocket
  "rocket_contrib",
  # see serde
  "serde_derive",
  # all handled by a "fluent" credit
  "fluent-bundle",
  "fluent-syntax",
  "intl-memoizer",
  # handled by html5ever
  "markup5ever_rcdom",
]

exclude = [
  # pls
  # "web/",
  # "migrations/",
  "web/**/*",
  "migrations/**/*",
]

[badges]
travis-ci = { repository = "ascclemens/paste", branch = "master" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
# getting current commit
git2 = "0.13"
# credits generation
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5"
tera = "1"

[dependencies]
# json serialization and deserialization
serde = "1"
serde_derive = "1"
serde_json = "1"

# creating paste histories
git2 = "0.13"

# error handling in the crate
anyhow = "1"

# accepting base64 gzip data
libflate = "1"

# accepting base64 xz data
xz2 = "0.1"

# secure password hashing
sodiumoxide = "0.2"

# environment variable loading
dotenv = "0.15"

# lazy statics
lazy_static = "1"

# complicated ifs with pattern matching
if_chain = "1"

# splitting on graphemes
unicode-segmentation = "1"

# configuration files
toml = "0.5"

# rate limiting
ipnetwork = "0.18"

# connection pooling
r2d2 = "0.8"

# redis connection pooling
r2d2_redis = "0.14"

# scheduling jobs
sidekiq = "0.9"

# username validation
unicode_categories = "0.1"

# email templates
tera = "0.11"

# html sanitizing
ammonia = "3"

# html parsing
html5ever = "0.25"
markup5ever_rcdom = "0.1"

# url parsing
url = "2"

# comparing strings without case
unicase = "2"

# totp for two-factor authentication
one-time = "0.1"

# needed to handle multipart's mime types
# old version required because multipart depends on an old version
mime = "0.3"

# rewriting image urls for camo with SHA1-HMAC
hmac = "0.11"
sha-1 = "0.9"

# Gravatar support
md-5 = "0.9"

# source of randomness
rand = "0.8"

# creating sha-384 integrity hashes
sha2 = "0.9"

# csv parsing
csv = "1"

# language ids for localisation
unic-langid = "0.9"

# localisation
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"

# anti-csrf tokens, encoding for totp shared keys, handling binary uploads in json
data-encoding = "2"

# image processing (avatars)
image = "0.23"
libwebp-sys = "0.9"

# filters
regex = "1"
serde_regex = "1"

# web logic
[dependencies.rocket]
version = "0.4"
features = ["tls"]

# web logic with json and uuids
[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "tera_templates"]

# unique paste-related ids
[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

# database orm
[dependencies.diesel]
version = "1"
features = ["unstable", "postgres", "uuidv07", "r2d2", "chrono", "network-address"]

# timestamp handling
[dependencies.chrono]
version = "0.4"
features = ["serde"]

# markdown rendering
[dependencies.comrak]
version = "0.12"
default-features = false

# accepting multipart input
[dependencies.multipart]
version = "0.18"
default-features = false
features = ["server"]

# faster hashmaps
[dependencies.hashbrown]
git = "https://github.com/rust-lang/hashbrown"
features = ["nightly", "serde"]

# displaying otpauth urls
[dependencies.qrcode]
git = "https://github.com/kennytm/qrcode-rust"
default-features = false
features = ["svg"]

# better synchronisation primitives
[dependencies.parking_lot]
version = "0.11"
features = ["nightly"]

# requests to gravatar
[dependencies.reqwest]
version= "0.11"
features = ["blocking"]
