[package]
name = "worker_email"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# sending and creating emails
lettre = { git = "https://github.com/lettre/lettre" }
lettre_email = { git = "https://github.com/lettre/lettre" }
native-tls = "0.2"

# deserializing config
serde = "1"
serde_derive = "1"

# config format
toml = "0.5"
