[package]
name = "worker_email"
version = "0.1.0"
authors = ["Anna Clemens <git@annaclemens.io>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# deserializing config
serde = "1"
serde_derive = "1"

# config format
toml = "0.5"

[dependencies.lettre]
git = "https://github.com/lettre/lettre"
features = ["smtp-transport", "native-tls", "builder"]
