cargo-features = ["edition"]

[package]
name = "worker_expire_paste"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
dotenv = "0.13"
failure = "0.1"
uuid = "0.6"

[dependencies.diesel]
version = "1"
features = ["postgres", "uuid", "chrono"]
