[package]
name = "worker_expire_paste"
version = "0.1.0"
authors = ["Anna Clemens <git@annaclemens.io>"]

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4"
dotenv = "0.15"
uuid = "0.8"

[dependencies.diesel]
version = "1"
features = ["unstable", "postgres", "uuidv07", "chrono"]
